--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit>=1.36
-pandas>=2.2
-numpy>=1.26
-folium>=0.14
-streamlit-folium>=0.12
-geopy
-tzlocal
-shapely
-pyproj
-scikit-learn
-alphashape
+streamlit==1.36.0
+pandas==2.2.2
+numpy==1.26.4
+folium==0.14.0
+streamlit-folium==0.12.0
+geopy==2.4.1
+tzlocal==5.2
+shapely==2.0.4
+pyproj==3.6.1
+scikit-learn==1.5.1
+alphashape==1.3.1
